--- a/Coursework/Portfolio/scss/main.scss
+++ b/Coursework/Portfolio/scss/main.scss
@@ -1,38 +1,11 @@
-
+@import 'config';
+@import 'menu';
 $primary-color: #444;
 $secondary-color: #eece1a;
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
 $background-opacity: 0.9;
 
-@mixin easeOut 
-{
-    transition: all 0.5s ease-out;
-}
-
-@mixin background
-{
-    @if $show-home-image 
-    {
-        &#bg-img 
-        {
-            background: $home-image;
-            background-attachment: fixed;
-            background-size: cover;
-
-            &:after {
-                content: '';
-                position: absolute;
-                top: 0;
-                right: 0;
-                width: 100%;
-                height: 100%;
-                background: rgba($primary-color, $background-opacity);
-                z-index: -1;
-            }
-        }
-    }
-}
 
 * {
     box-sizing: border-box;
@@ -41,7 +14,7 @@ $background-opacity: 0.9;
 body {
     @include background;
     background: $primary-color;
-    color: cyan;
+    color: white;
     height: 100%;
     margin: 0;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
