--- a/Coursework/Portfolio/scss/_config.scss
+++ b/Coursework/Portfolio/scss/_config.scss
@@ -1,4 +1,7 @@
 
+$primary-color: #444;
+$secondary-color: #eece1a;
+
 @mixin easeOut 
 {
     transition: all 0.5s ease-out;
@@ -25,5 +28,40 @@
                 z-index: -1;
             }
         }
+    }
+}
+
+@mixin mediaSm 
+{
+    @media screen and (max-width: 500px)
+    {
+        @content;
+    }
+}
+
+
+@mixin mediaMd
+{
+    @media screen and (max-width: 768px)
+    {
+        @content;
+    }
+}
+
+
+@mixin mediaLg
+{
+    @media screen and (min-width: 769px) and (max-width: 1170)
+    {
+        @content;
+    }
+}
+
+
+@mixin mediaXL
+{
+    @media screen and (min-width: 1171px)
+    {
+        @content;
     }
 }
