--- a/Coursework/Portfolio/scss/_menu.scss
+++ b/Coursework/Portfolio/scss/_menu.scss
@@ -41,3 +41,108 @@
     }
 }
 
+.menu
+{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    opacity: 0.9;
+    visibility: hidden;
+
+    &.show
+    {
+        visibility: visible;
+    }
+
+    &-branding, &-nav
+    {
+        display: flex;
+        flex-flow: column wrap;
+        align-items: center;
+        justify-content: center;
+        float: left;
+        width: 50%;
+        height: 100vh;
+        overflow: hidden;
+    }
+
+    &-nav
+    {
+        margin: 0;
+        padding: 0;
+        background: darken($primary-color, 5);
+        list-style: none;
+        transform: translate3d(0, -100%, 0);
+        @include easeOut;
+
+        &.show
+        {
+            transform: translate3d(0, 0, 0);
+
+        }
+    }
+
+    &-branding
+    {
+        background: $primary-color;
+        @include easeOut;
+        transform: translate3d(0, 100%, 0);
+
+        &.show
+        {
+            transform: translate3d(0, 0, 0);
+        }
+
+        .portrait 
+        {
+            width: 250px;
+            height: 250px;
+            background: url("../img/portrait.jpg");
+            border: solid 3px $secondary-color;
+            border-radius: 50%;
+        }
+    }
+
+    .nav-item
+    {
+        transform: translate3d(600px, 0, 0);
+        @include easeOut;
+
+        &.show
+        {
+            transform: translate3d(0, 0, 0);
+        }
+
+        &.current > a
+        {
+            color: $secondary-color;
+        }
+    }
+
+    .nav-link
+    {
+        display: inline-block;
+        position: relative;
+        font-size: 30px;
+        text-transform: uppercase;
+        padding: 1rem 0;
+        font-weight: 300;
+        color: white;
+        text-decoration: none;
+        @include easeOut;
+        
+        &:hover
+        {
+            color:$secondary-color;
+        }
+    }
+}
+
+
+@for $i from 1 through 4
+{
+    .nav-item:nth-child(#{$i})
+    {
+        transition-delay: 0.1s * $i;
+    }
+}
