--- a/Coursework/Portfolio/scss/_config.scss
+++ b/Coursework/Portfolio/scss/_config.scss
@@ -1,6 +1,9 @@
 
 $primary-color: #444;
 $secondary-color: #eece1a;
+$show-home-image: true;
+$home-image: url(../img/background.jpg);
+$background-opacity: 0.9;
 
 @mixin easeOut 
 {
@@ -28,6 +31,18 @@ $secondary-color: #eece1a;
                 z-index: -1;
             }
         }
+    }
+}
+
+@function set-text-color($color)
+{
+    @if (lightness($color) > 40)
+    {
+        @return black;
+    }
+    @else
+    {
+        @return white;
     }
 }
 
