--- a/Coursework/Portfolio/scss/main.scss
+++ b/Coursework/Portfolio/scss/main.scss
@@ -1,10 +1,6 @@
 @import 'config';
 @import 'menu';
-@import 'mobile';
 
-$show-home-image: true;
-$home-image: url(../img/background.jpg);
-$background-opacity: 0.9;
 
 
 * {
@@ -14,7 +10,7 @@ $background-opacity: 0.9;
 body {
     @include background;
     background: $primary-color;
-    color: white;
+    color: set-text-color($primary-color); 
     height: 100%;
     margin: 0;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -54,7 +50,7 @@ header{
 
 main {
     padding: 4rem;
-    height: 100%;
+    min-height: calc(100vh - 60px);
 
     &#home {
         overflow: hidden;
@@ -75,3 +71,61 @@ main {
         }
     }
 }
+
+.about-info
+{
+    display: grid;
+    grid-template-areas: 
+    'bioimage bio bio'
+    'job1 job2 job3';
+    grid-template-columns: repeat(3, 1fr);
+
+    grid-gap: 30px;
+            
+        .bio-img
+        {
+            grid-area: bioimage;
+            margin: auto;
+            border-radius: 50%;
+            border: $secondary-color 3px solid
+        }
+
+        .bio
+        {
+            grid-area: bio;
+            font-size: 1.5rem;
+        }
+
+        .job-1
+        {
+            grid-area: job1;
+        }
+
+        .job-2
+        {
+            grid-area: job2;
+        }
+
+        .job-3
+        {
+            grid-area: job3;
+        }
+
+        .job{
+            background: lighten($primary-color, 5);
+            padding: 0.5rem;
+            border-bottom: $secondary-color 5px solid;
+        }
+}
+
+#main-footer
+{
+    text-align: center;
+    padding: 1rem;
+    background: darken($primary-color, 10);
+    color: set-tect-color($primary-color);
+    height: 60px;
+}
+
+
+@import 'mobile';
