--- a/Coursework/Portfolio/scss/_mobile.scss
+++ b/Coursework/Portfolio/scss/_mobile.scss
@@ -1,11 +1,18 @@
 
 @include mediaXL
 {
-
+    .projects
+    {
+        grid-template-columns: repeat(4, 1fr);
+    }
 }
 
 @include mediaLg
 {
+    .projects
+    {
+        grid-template-columns: repeat(3, 1fr);
+    }
 
 }
 
@@ -66,6 +73,12 @@
 
         grid-template-columns: 1fr;
     }
+
+    
+    .projects
+    {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
 
@@ -74,5 +87,9 @@
     main#home h1 
     {
         margin-top: 10vh;
+    }
+    .projects
+    {
+        grid-template-columns: 1fr;
     }
 }
