--- a/Coursework/Portfolio/scss/main.scss
+++ b/Coursework/Portfolio/scss/main.scss
@@ -118,6 +118,80 @@ main {
         }
 }
 
+.projects
+{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 0.7rem;
+
+    img {
+        width: 100%;
+        border: 3px solid white;
+
+        &:hover{
+            opacity: 0.5;
+            border-color: $secondary-color;
+            @include easeOut;
+        }
+    }
+}
+
+.btn
+{
+    display: block;
+    padding: 0.5rem 1rem;
+    border: 0;
+    margin-bottom: 0.3 rem;
+
+    &:hover{
+        background-color: $secondary-color;
+        color: set-text-color($secondary-color);
+        @include easeOut;
+    }
+}
+
+.btn-dark
+{
+    @extend .btn;
+    background: darken($primary-color, 50);
+    color: white;
+}
+
+.btn-light
+{
+    @extend .btn;
+    background: lighten($primary-color, 50);
+    color: #333;
+}
+
+.boxes
+{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 1rem;
+
+    div 
+    {
+        font-size: 2rem;
+        border: 3px white solid;
+        padding: 1.5rem 2.5rem;
+        margin-bottom: 3rem;
+        @include easeOut;
+
+        &:hover
+        {
+            padding: 0.5rem 1.5rem;
+            background: $secondary-color;
+            color: set-text-color($secondary-color);
+            span {
+                color: set-text-color($secondary-color);
+            };
+        }
+    }
+}
+
 #main-footer
 {
     text-align: center;
@@ -126,6 +200,5 @@ main {
     color: set-tect-color($primary-color);
     height: 60px;
 }
-
 
 @import 'mobile';
