--- a/Project/scss/_mobile.scss
+++ b/Project/scss/_mobile.scss
@@ -40,11 +40,6 @@
 
 @include mediaMd
 {
-    #part1
-    {
-
-    }
-
     .menu-nav
     {
         height: 12vh;
@@ -133,11 +128,16 @@
     #third-page
     {
         background-color: #333;
+        h1 
+        {
+            padding-top: 5vh;
+            text-align: center;
+        }
         .image-container
         {
             max-width: 100vw;
             align-content: center;
-            margin-top: 7vh;
+            margin-top: 2vh;
             img 
             {
                 max-width: 100vw;
@@ -150,12 +150,8 @@
                 width: 90vw;
             }
 
-
         }
-
     }
-
-
 }
 
 
@@ -253,6 +249,11 @@
     #third-page
     {
         background-color: #333;
+        h1 
+        {
+            padding-top: 5vh;
+            text-align: center;
+        }
         .image-container
         {
             max-width: 100vw;
