--- a/css/main.css
+++ b/css/main.css
@@ -24,51 +24,38 @@
   position: fixed;
   top: 0;
   width: 100%;
-  opacity: 0.9;
   visibility: hidden; }
   .menu.show {
     visibility: visible; }
-  .menu-branding, .menu-nav {
+  .menu-nav {
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: row wrap;
     align-items: center;
     justify-content: center;
-    float: left;
-    width: 50%;
-    height: 100vh;
-    overflow: hidden; }
-  .menu-nav {
-    margin: 0;
+    float: right;
+    width: 30vw;
+    height: 10vh;
+    overflow: hidden;
+    column-gap: 0.5rem;
+    margin: 0 10vw 0 0;
     padding: 0;
     background: #373737;
     list-style: none;
-    transform: translate3d(0, -100%, 0);
+    transform: translate3d(200%, 0, 0);
     transition: all 0.5s ease-out; }
     .menu-nav.show {
       transform: translate3d(0, 0, 0); }
-  .menu-branding {
-    background: #444;
-    transition: all 0.5s ease-out;
-    transform: translate3d(0, 100%, 0); }
-    .menu-branding.show {
-      transform: translate3d(0, 0, 0); }
-    .menu-branding .portrait {
-      width: 250px;
-      height: 250px;
-      background: url("../img/portrait.jpg");
-      border: solid 3px #eece1a;
-      border-radius: 50%; }
   .menu .nav-item {
-    transform: translate3d(600px, 0, 0);
-    transition: all 0.5s ease-out; }
+    opacity: 0;
+    transition: all 1s ease-out;
+    font-size: 1rem; }
     .menu .nav-item.show {
-      transform: translate3d(0, 0, 0); }
+      opacity: 1; }
     .menu .nav-item.current > a {
       color: #eece1a; }
   .menu .nav-link {
     display: inline-block;
     position: relative;
-    font-size: 30px;
     text-transform: uppercase;
     padding: 1rem 0;
     font-weight: 300;
@@ -99,9 +86,9 @@ body {
   height: 100%;
   margin: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  line-height: 1.5; }
+  line-height: 1.5;
+  overflow: hidden; }
   body#bg-img {
-    background: url(../img/background.jpg);
     background-attachment: fixed;
     background-size: cover; }
     body#bg-img:after {
@@ -117,12 +104,11 @@ body {
 h1, h2, h3 {
   margin: 0;
   font-weight: 400; }
-  h1.lg-heading, h2.lg-heading, h3.lg-heading {
-    font-size: 6rem; }
   h1.sm-heading, h2.sm-heading, h3.sm-heading {
     margin-bottom: 2rem;
     padding: 0.2rem 1rem;
-    background: rgba(73, 73, 73, 0.5); }
+    background: rgba(73, 73, 73, 0.5);
+    margin: 0.1rem; }
 
 a {
   color: white;
@@ -137,140 +123,272 @@ header {
   color: #eece1a; }
 
 main {
-  padding: 4rem;
   min-height: calc(100vh - 60px); }
   main#home {
     overflow: hidden; }
-    main#home h1 {
-      margin-top: 20vh; }
-  main .icons {
-    margin-top: 1rem; }
-    main .icons a {
-      padding: 0.4rem; }
-      main .icons a:hover {
-        color: #eece1a;
-        transition: all 0.5s ease-out; }
+  main #first-page h1 {
+    margin-top: 20vh; }
+  main #first-page .grid {
+    display: grid;
+    grid-template-areas: 'p1 p1 . . .' '. p2 p2 p2 .' '. . p3 p3 p3'; }
+    main #first-page .grid #part1 {
+      grid-area: p1; }
+    main #first-page .grid #part2 {
+      grid-area: p2; }
+    main #first-page .grid #part3 {
+      grid-area: p3; }
 
-.about-info {
-  display: grid;
-  grid-template-areas: 'bioimage bio bio' 'job1 job2 job3';
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 30px; }
-  .about-info .bio-img {
-    grid-area: bioimage;
+#second-page {
+  padding-top: 5vh;
+  padding-bottom: 5vh; }
+  #second-page h1 {
+    font-size: 4rem;
+    padding: 0 0 0 0;
+    margin: 0 0 0 0;
+    text-align: center;
+    text-decoration: underline #eece1a; }
+  #second-page h2 {
+    background: rgba(73, 73, 73, 0.5);
+    color: #eece1a; }
+  #second-page video {
     margin: auto;
-    border-radius: 50%;
-    border: #eece1a 3px solid; }
-  .about-info .bio {
-    grid-area: bio;
-    font-size: 1.5rem; }
-  .about-info .job-1 {
-    grid-area: job1; }
-  .about-info .job-2 {
-    grid-area: job2; }
-  .about-info .job-3 {
-    grid-area: job3; }
-  .about-info .job {
-    background: #515151;
-    padding: 0.5rem;
-    border-bottom: #eece1a 5px solid; }
+    padding-bottom: 5vh; }
+  #second-page .indent {
+    margin-left: 7.5vh;
+    color: #eece1a; }
 
-.projects {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 0.7rem; }
-  .projects img {
-    width: 100%;
-    border: 3px solid white; }
-    .projects img:hover {
-      opacity: 0.5;
-      border-color: #eece1a;
-      transition: all 0.5s ease-out; }
+#third-page {
+  padding: 0; }
+  #third-page h1 {
+    margin-left: 2rem;
+    color: #eece1a; }
+  #third-page .pics {
+    display: flex wrap;
+    flex-direction: row;
+    gap: 50vw; }
+  #third-page .gallery-image {
+    display: block; }
+  #third-page .image-container {
+    display: flex;
+    position: absolute;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    transition: transform 0.5s, filter 0.5s;
+    max-height: calc(100vh - 64px*2);
+    background-color: #333; }
+    #third-page .image-container img {
+      max-height: 80vh; }
 
-.btn, .btn-dark, .btn-light {
+.page {
+  position: relative;
+  padding: 4rem;
+  height: 100vh; }
+
+.down-button {
+  position: absolute;
+  right: 50vw;
+  left: auto;
+  bottom: 1rem;
+  border: solid white 2px;
+  border-radius: 50%; }
+  .down-button:hover {
+    transition: all 0.5s ease-out;
+    color: #eece1a;
+    border-color: #eece1a; }
+
+.up-button {
+  position: absolute;
+  right: 50vw;
+  left: auto;
+  top: 1rem;
+  border: solid white 2px;
+  border-radius: 50%;
+  z-index: 3; }
+  .up-button:hover {
+    transition: all 0.5s ease-out;
+    color: #eece1a;
+    border-color: #eece1a; }
+
+#left {
+  rotate: -90deg; }
+
+#right {
+  rotate: 90deg; }
+
+.left-button {
+  position: absolute;
+  top: 50vh;
+  left: 1rem;
+  border: solid white 2px;
+  border-radius: 50%;
   display: block;
-  padding: 0.5rem 1rem;
-  border: 0;
-  margin-bottom: 0.3 rem; }
-  .btn:hover, .btn-dark:hover, .btn-light:hover {
-    background-color: #eece1a;
-    color: black;
-    transition: all 0.5s ease-out; }
+  z-index: 3; }
+  .left-button:hover {
+    transition: all 0.5s ease-out;
+    color: #eece1a;
+    border-color: #eece1a; }
 
-.btn-dark {
-  background: black;
-  color: white; }
+.right-button {
+  position: absolute;
+  top: 50vh;
+  right: 1rem;
+  border: solid white 2px;
+  border-radius: 50%;
+  float: right;
+  z-index: 30; }
+  .right-button:hover {
+    transition: all 0.5s ease-out;
+    color: #eece1a;
+    border-color: #eece1a; }
 
-.btn-light {
-  background: #c4c4c4;
-  color: #333; }
-
-.boxes {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: center;
-  margin-top: 1rem; }
-  .boxes div {
-    font-size: 2rem;
-    border: 3px white solid;
-    padding: 1.5rem 2.5rem;
-    margin-bottom: 3rem;
-    transition: all 0.5s ease-out; }
-    .boxes div:hover {
-      padding: 0.5rem 1.5rem;
-      background: #eece1a;
-      color: black; }
-      .boxes div:hover span {
-        color: black; }
-
-#main-footer {
-  text-align: center;
-  padding: 1rem;
-  background: #2b2b2b;
-  color: set-tect-color(#444);
-  height: 60px; }
+video {
+  height: 75vh; }
 
 @media screen and (min-width: 1171px) {
-  .projects {
-    grid-template-columns: repeat(4, 1fr); } }
+  .lg-heading {
+    font-size: 6rem; }
+  #second-page .grid {
+    margin: auto;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 4rem;
+    margin-bottom: 10vh; } }
 
-@media screen and (min-width: 769px) and (max-width: 1170) {
-  .projects {
-    grid-template-columns: repeat(3, 1fr); } }
+@media screen and (min-width: 769px) and (max-width: 1170px) {
+  .lg-heading {
+    font-size: 6rem; }
+  #second-page .grid {
+    margin: auto;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 4rem;
+    margin-bottom: 10vh; } }
 
-@media screen and (max-width: 768px) {
-  main {
-    align-items: center;
-    text-align: center; }
-    main .lg-heading {
-      line-height: 1;
-      margin-bottom: 1rem; }
-  ul.menu-nav, div.menu-branding {
-    float: none;
-    width: 100%;
-    min-height: 0; }
-    ul.menu-nav.show, div.menu-branding.show {
-      transform: translate3d(0, 0, 0); }
+@media screen and (min-width: 501px) and (max-width: 768px) {
   .menu-nav {
-    height: 75vh;
-    transform: translate3d(-100%, 0, 0);
-    font-size: 24px; }
-  .menu-branding {
-    height: 25vh;
-    transform: translate3d(100%, 0, 0); }
-    .menu-branding .portrait {
-      background: url("../img/portrait_small.jpg");
-      width: 150px;
-      height: 150px; }
-  .about-info {
-    grid-template-areas: 'bioimage' 'bio' 'job1' 'job2' 'job3';
-    grid-template-columns: 1fr; }
-  .projects {
-    grid-template-columns: repeat(2, 1fr); } }
-
-@media screen and (max-width: 500px) {
+    height: 12vh;
+    margin: 0 0 0 0;
+    width: 100%;
+    transform: translate3d(-100%, 0, 0); }
+  .lg-heading {
+    font-size: 2.5rem; }
+  .sm-heading {
+    font-size: 1.5rem; }
   main#home h1 {
     margin-top: 10vh; }
-  .projects {
-    grid-template-columns: 1fr; } }
+  #second-page {
+    padding: 0; }
+    #second-page h1 {
+      padding-top: 12vh;
+      font-size: 3rem; }
+    #second-page h2 {
+      text-align: center;
+      padding-top: 5vh; }
+    #second-page ul {
+      margin: 0;
+      padding: 0; }
+    #second-page li {
+      font-size: 1rem; }
+    #second-page .grid {
+      max-height: 100vh;
+      display: grid;
+      margin: 0;
+      padding: 0;
+      grid-gap: 2px;
+      float: left;
+      grid-template-areas: 'li1 vid' 'li vid' 'li vid' 'li vid' 'li vid'; }
+      #second-page .grid #li1 {
+        grid-area: li1; }
+      #second-page .grid #li2 {
+        grid-area: li2; }
+      #second-page .grid .rest {
+        grid-area: li; }
+      #second-page .grid video {
+        grid-area: vid;
+        max-height: 60vh; }
+    #second-page br {
+      display: none; }
+  #third-page {
+    background-color: #333; }
+    #third-page h1 {
+      padding-top: 5vh;
+      text-align: center; }
+    #third-page .image-container {
+      max-width: 100vw;
+      align-content: center;
+      margin-top: 2vh; }
+      #third-page .image-container img {
+        max-width: 100vw;
+        justify-content: center; }
+      #third-page .image-container.small {
+        left: -1vw;
+        right: auto;
+        width: 90vw; } }
+
+@media screen and (max-width: 500px) {
+  menu {
+    opacity: 1; }
+  .menu-nav {
+    height: 12vh;
+    width: 100%;
+    transform: translate3d(-100%, 0, 0); }
+  .lg-heading {
+    font-size: 2.5rem; }
+  .sm-heading {
+    font-size: 1.5rem; }
+  main#home h1 {
+    margin-top: 10vh; }
+  #second-page {
+    padding: 0; }
+    #second-page h1 {
+      margin-left: 0.2rem;
+      padding-top: 4px;
+      font-size: 2rem;
+      float: left; }
+    #second-page h2 {
+      padding-top: 5vh; }
+    #second-page ul {
+      margin: 0;
+      padding: 0; }
+    #second-page li {
+      font-size: 1rem; }
+    #second-page .grid {
+      max-height: 100vh;
+      display: grid;
+      margin: 0;
+      padding: 0;
+      grid-gap: 2px;
+      float: left;
+      grid-template-areas: 'li1 vid' 'li vid' 'li vid' 'li vid' 'li vid'; }
+      #second-page .grid #li1 {
+        grid-area: li1; }
+      #second-page .grid #li2 {
+        grid-area: li2; }
+      #second-page .grid .rest {
+        grid-area: li; }
+      #second-page .grid video {
+        grid-area: vid;
+        max-height: 60vh; }
+    #second-page br {
+      display: none; }
+  #third-page {
+    background-color: #333; }
+    #third-page h1 {
+      padding-top: 5vh;
+      text-align: center; }
+    #third-page .image-container {
+      max-width: 100vw;
+      align-content: center;
+      margin-top: 7vh; }
+      #third-page .image-container img {
+        max-width: 100vw;
+        justify-content: center; }
+      #third-page .image-container.small {
+        left: -7vw;
+        right: auto;
+        width: 90vw; }
+    #third-page .pics {
+      background-color: #333; } }
