--- a/Project/scss/_mobile.scss
+++ b/Project/scss/_mobile.scss
@@ -15,6 +15,10 @@
             grid-gap: 4rem;
             margin-bottom: 10vh;
         }
+        .indent
+        {
+            margin-left: 7.5vh;
+        }
     }
 }
 
@@ -33,6 +37,11 @@
             grid-template-columns: 1fr 1fr;
             grid-gap: 4rem;
             margin-bottom: 10vh;
+        }
+        
+        .indent
+        {
+            margin-left: 7.5vh;
         }
     }
 }
@@ -58,13 +67,13 @@
     }
     main#home h1 
     {
-        margin-top: 10vh;
+        margin-top: 5vh;
     }
 
     #second-page 
     {
 
-        padding: 0;
+        padding: 2px;
         h1
         {   
             padding-top: 12vh;
@@ -100,6 +109,21 @@
             'li vid'
             'li vid'
             'li vid';
+            
+        .indent
+        {
+            margin-left: 4vh;
+            color: cyan;
+        }
+        ul
+        {
+            max-height: 80vh;
+            list-style: none;
+        }
+        li
+        {
+            font-size: 0.75rem;
+        }
 
             #li1{
                 grid-area: li1;
@@ -178,13 +202,18 @@
     }
     main#home h1 
     {
-        margin-top: 10vh;
+        margin-top: 5vh;
     }
 
     #second-page 
     {
 
         padding: 0;
+        .indent
+        {
+            margin-left: 2vh;
+            color: red;
+        }
         h1
         {   
             margin-left: 0.2rem;
@@ -203,7 +232,8 @@
         }
         li
         {
-            font-size: 1rem;
+            font-size: 0.75rem;
+            list-style: none;
         }
 
         .grid
@@ -221,7 +251,14 @@
             'li vid'
             'li vid'
             'li vid';
-
+            ul
+            {
+                max-height: 80vh;
+            }
+            li
+            {
+                font-size: 0.75rem;
+            }
             #li1{
                 grid-area: li1;
             }
