--- a/css/main.css
+++ b/css/main.css
@@ -293,7 +293,7 @@ video {
     #second-page .grid {
       max-height: 100vh;
       display: grid;
-      margin: 0;
+      margin: 5vh, 0, 0, 5vh;
       padding: 0;
       grid-gap: 2px;
       float: left;
@@ -352,8 +352,7 @@ video {
   #second-page {
     padding: 0; }
     #second-page .indent {
-      margin-left: 2vh;
-      color: red; }
+      margin-left: 2vh; }
     #second-page h1 {
       margin-left: 0.2rem;
       padding-top: 4px;
@@ -370,19 +369,16 @@ video {
     #second-page .grid {
       max-height: 100vh;
       display: grid;
-      margin: 0;
-      padding: 0;
+      margin: 5vh, 0, 0, 5vh;
+      padding: 2px;
       grid-gap: 2px;
       float: left;
-      grid-template-areas: 'li1 vid' 'li vid' 'li vid' 'li vid' 'li vid'; }
+      grid-template-rows: 1fr;
+      grid-template-columns: 1fr 1fr; }
       #second-page .grid ul {
         max-height: 80vh; }
       #second-page .grid li {
         font-size: 0.75rem; }
-      #second-page .grid #li1 {
-        grid-area: li1; }
-      #second-page .grid #li2 {
-        grid-area: li2; }
       #second-page .grid .rest {
         grid-area: li; }
       #second-page .grid video {
