--- a/css/main.css
+++ b/css/main.css
@@ -354,12 +354,12 @@ video {
     #second-page .indent {
       margin-left: 2vh; }
     #second-page h1 {
+      padding-top: 5vh; }
+    #second-page h2 {
       margin-left: 0.2rem;
       padding-top: 4px;
       font-size: 2rem;
       float: left; }
-    #second-page h2 {
-      padding-top: 5vh; }
     #second-page ul {
       margin: 0;
       padding: 0; }
@@ -369,7 +369,7 @@ video {
     #second-page .grid {
       max-height: 100vh;
       display: grid;
-      margin: 5vh, 0, 0, 5vh;
+      margin: 5vh, 0, 0, 0;
       padding: 2px;
       grid-gap: 2px;
       float: left;
