--- a/css/main.css
+++ b/css/main.css
@@ -351,7 +351,7 @@ video {
   main#home h1 {
     margin-top: 5vh; }
   #second-page {
-    height: 100dvh;
+    height: 100%;
     padding: 0; }
     #second-page .indent {
       margin-left: 2vh; }
