--- a/css/main.css
+++ b/css/main.css
@@ -350,8 +350,9 @@ video {
     font-size: 1.5rem; }
   main#home h1 {
     margin-top: 5vh; }
+  .page {
+    height: 100svh; }
   #second-page {
-    height: 100svh;
     padding: 0; }
     #second-page .indent {
       margin-left: 2vh; }
