--- a/css/main.css
+++ b/css/main.css
@@ -341,7 +341,7 @@ video {
   .up-button {
     top: 4vh; }
   .down-button {
-    bottom: 4vh; }
+    bottom: 6vh; }
   menu {
     opacity: 1; }
   .menu-nav {
@@ -369,7 +369,7 @@ video {
       font-size: 2rem;
       float: left; }
     #second-page .grid {
-      max-height: 60vh;
+      max-height: 60svh;
       display: grid;
       margin: 5vh, 0, 0, 0;
       padding: 2px;
@@ -380,7 +380,7 @@ video {
       #second-page .grid ul {
         margin: 0;
         padding: 0;
-        max-height: 70vh; }
+        max-height: 70svh; }
       #second-page .grid li {
         font-size: 0.75rem;
         font-size: 0.75rem;
