--- a/css/main.css
+++ b/css/main.css
@@ -386,10 +386,12 @@ video {
 @media screen and (max-width: 500px) {
   .up-button {
     color: red;
-    display: none; }
+    display: none;
+    visibility: hidden; }
   .down-button {
     color: red;
-    display: none; }
+    display: none;
+    visibility: hidden; }
   menu {
     opacity: 1; }
   .menu-nav {
