--- a/css/main.css
+++ b/css/main.css
@@ -342,30 +342,30 @@ video {
         max-height: 60vh; }
     #second-page br {
       display: none; }
-    #second-page .down-button {
-      position: absolute;
-      right: 50vw;
-      left: auto;
-      bottom: 1rem;
-      border: solid white 2px;
-      border-radius: 50%;
-      z-index: 3; }
-      #second-page .down-button:hover {
-        transition: all 0.5s ease-out;
-        color: #eece1a;
-        border-color: #eece1a; }
-    #second-page .up-button {
-      position: absolute;
-      right: 50vw;
-      left: auto;
-      top: 1rem;
-      border: solid red 2px;
-      border-radius: 50%;
-      z-index: 3; }
-      #second-page .up-button:hover {
-        transition: all 0.5s ease-out;
-        color: #eece1a;
-        border-color: #eece1a; }
+  .down-button {
+    position: absolute;
+    right: 50vw;
+    left: auto;
+    bottom: 1rem;
+    border: solid white 2px;
+    border-radius: 50%;
+    z-index: 3; }
+    .down-button:hover {
+      transition: all 0.5s ease-out;
+      color: #eece1a;
+      border-color: #eece1a; }
+  .up-button {
+    position: absolute;
+    right: 50vw;
+    left: auto;
+    top: 1rem;
+    border: solid white 2px;
+    border-radius: 50%;
+    z-index: 3; }
+    .up-button:hover {
+      transition: all 0.5s ease-out;
+      color: #eece1a;
+      border-color: #eece1a; }
   #third-page {
     background-color: #333; }
     #third-page h1 {
